2008-12-22 Holger Vogt
 * /spicelib/parser/inpdomod.c: checks for BSIM3 and BSIM4 look for
   major versions 3.2, 3.3, 4.2 - 4.6   
 
2008-12-22 Dietmar Warning
 * adms/admst/ngspiceMakefile.am.xml: switch to libtool (unfortunately!)

2008-12-20 Holger Vogt
 * bug 2449483 removed: inpdomod.c:293 added as in b3v32check.c:42

2008-12-14 Dietmar Warning
 * src/Makefile.am: "hard wired" makefile dependency generation compiler options 
   removed for main.c - this should be done by libtool, left it for tclspice and 
   xspice codemodels (see below)
 * src/xspice/icm: removed Makefile.am - not used, configuration relays
   on makedefs.in and fixed Makefile, these files have now sun compiler 
   specific options DEPFLAGS added
 * src/xspice/ipc/ipc*.c: prevent some warnings under sun compiler
 
2008-12-07 Dietmar Warning
 * src/main.c: double semikolon in nutmeginfo decl. gives:
               "syntax error:  empty declaration" under solaris ss12 

2008-12-06 Holger Vogt
 * frontend/spec.c, com_fft.c: free_pnode(first_name); moved further down to allow
   'fft vout' instead of only 'fft v(vout)'

2008-11-30 Lionel Sainte Cluque
 * configure.in: --with-tcl search path make broader to limit the need of the
        optional argument. Message in case of tclConfig.sh file not found
	fixed by sed.
 * examples/tclspice/*/*.tcl: fixed load libspice lines due to the
        directories hierarchy. (One level more)

2008-11-29 Holger Vogt
 * frontend/numparam/xpressn.c: rand() and gauss() moved to 
   math/misc/randnumb.c
   -> 'set rndseed=value' value = integer > 0 in spinit will yield
      deterministic pseudo random number sequence.
   -> random() and rand() with correspongding max value  

2008-11-26 Dietmar Warning
 * src/spicelib/devices/bsim4v4, bsim4v5: this is a backup because the patch
   of Phil Barker are providing only a placeholder for propriarity sti stress 
   model - not any equation. If the stimod feature is some time published we 
   can implement it again.
